--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -1,12 +1,6 @@
 services:
   php-fpm:
-    build:
-      context: .
-      dockerfile: docker/Dockerfile
-      target: production
-      args:
-        UID: ${UID:-1000}
-        GID: ${GID:-1000}
+    image: ${IMAGE_NAME:-ghcr.io/arzamaskov/runtracker}:${APP_TAG:-app-latest}
     container_name: runtracker-php-fpm
     restart: unless-stopped
     env_file:
@@ -27,7 +21,7 @@ services:
     ports:
       - "127.0.0.1:8081:80"
     volumes:
-      - .:/var/www/html:ro
+      - ./public:/var/www/html/public:ro
       - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
     healthcheck:
       test: ["CMD-SHELL", "curl -sf http://localhost/health || exit 1"]
