--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,10 +14,17 @@ jobs:
   phpunit:
     name: PHPUnit
     runs-on: ubuntu-latest
+    needs: frontend
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Download frontend artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: frontend-build
+          path: public/build/
 
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
