ci(build): fix GHCR image path to use full repository name

--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -87,7 +87,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ghcr.io/${{ github.repository_owner }}/runtracker
+          images: ghcr.io/${{ github.repository }}
           tags: |
             type=raw,value=${{ matrix.name }}-${{ github.ref_name }}
             type=raw,value=${{ matrix.name }}-latest
