ci(cd): add automatic deploy on tag push

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -8,6 +8,10 @@ on:
         required: false
         default: 'latest'
         type: string
+  push:
+    tags:
+      - 'v*'
+
 
 jobs:
   deploy-production:
@@ -16,7 +20,6 @@ jobs:
     environment:
       name: production
       url: https://runtracker.ru
-    if: github.ref == 'refs/heads/main'
 
     steps:
       - name: Deploy to production
