--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -8,15 +8,17 @@ on:
         required: false
         default: 'latest'
         type: string
-  push:
-    tags:
-      - 'v*'
-
+  workflow_run:
+    workflows: ["Build Images"]
+    types:
+      - completed
 
 jobs:
   deploy-production:
     name: Deploy to Production
     runs-on: ubuntu-latest
+    # Only run if Build Images succeeded (for workflow_run trigger)
+    if: ${{ github.event_name == 'workflow_dispatch' || github.event.workflow_run.conclusion == 'success' }}
     environment:
       name: production
       url: https://runtracker.ru
@@ -65,7 +67,14 @@ jobs:
             fi
 
             # Determine version to deploy
-            VERSION="${{ github.event.inputs.version }}"
+            # For workflow_dispatch: use input version
+            # For workflow_run (after Build Images): use the tag from the triggering workflow
+            if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
+              VERSION="${{ github.event.inputs.version }}"
+            else
+              VERSION="${{ github.event.workflow_run.head_branch }}"
+            fi
+
             if [ "$VERSION" = "latest" ] || [ -z "$VERSION" ]; then
               APP_TAG="app-latest"
             else
